# fsocket

./: CMakeLists.txt  README.md  README.rst  fsocket.f90  test_fsocket_client.f90  test_fsocket_select.f90  test_fsocket_server.f90
cmake/: FindPythonModule.cmake  FindPythonSphinx.cmake
doc/: CMakeLists.txt  conf.py.in  index.rst
src/: CMakeLists.txt  fsocket_iface.c
test/: CMakeLists.txt
